kube/sample_containers.yaml
###############################################
# Yahoo service
###############################################
apiVersion: v1
kind: Service
metadata:
  name: yahoo
  labels:
    app: yahoo
    service: yahoo
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: yahoo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yahoo-v1
  labels:
    app: yahoo
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: yahoo
      version: v1
  template:
    metadata:
      labels:
        app: yahoo
        version: v1
    spec:
      serviceAccountName: yahoo-api
      containers:
      - name: yahoo
        image: docker.io/mungu42/yahoo
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
###############################################
# Google service
###############################################
---
apiVersion: v1
kind: Service
metadata:
  name: google
  labels:
    app: google
    service: google
spec:
  ports:
  - port: 8081
    name: http
  selector:
    app: google
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: google-v1
  labels:
    app: google
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: google
      version: v1
  template:
    metadata:
      labels:
        app: google
        version: v1
    spec:
      serviceAccountName: google-api
      containers:
      - name: google
        image: docker.io/mungu42/google
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8081
###############################################
# proxy service
###############################################
---
apiVersion: v1
kind: Service
metadata:
  name: proxy
  labels:
    app: proxy
    service: proxy
spec:
  ports:
  - port: 8082
    name: http
  selector:
    app: proxy
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxy-v1
  labels:
    app: proxy
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: proxy
      version: v1
  template:
    metadata:
      labels:
        app: proxy
        version: v1
    spec:
      serviceAccountName: proxy-service
      containers:
      - name: proxy
        image: docker.io/mungu42/proxy
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8082

---
###############################################
# Yahoo service
###############################################
# apiVersion: v1
# kind: Service
# metadata:
#   name: yahoo
#   labels:
#     app: yahoo
#     service: yahoo
# spec:
#   ports:
#   - port: 8080
#     name: http
#   selector:
#     app: yahoo
# ---
# apiVersion: v1
# kind: ServiceAccount
# metadata:
#   name: yahoo-api
#   labels:
#     account: yahoo
# ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yahoo-v2
  labels:
    app: yahoo
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: yahoo
      version: v2
  template:
    metadata:
      labels:
        app: yahoo
        version: v2
    spec:
      serviceAccountName: yahoo-api
      containers:
      - name: yahoo
        image: docker.io/mungu42/yahoo
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
