kube/destination-rules.yaml
# apiVersion: networking.istio.io/v1alpha3
# kind: DestinationRule
# metadata:
#   name: reviews
# spec:
#   host: reviews
#   subsets:
#   - name: v1
#     labels:
#       version: v1
#   - name: v2
#     labels:
#       version: v2
#   - name: v3
#     labels:
#       version: v3
# ---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: yahoo
spec:
  host: yahoo
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: google
spec:
  host: google
  subsets:
  - name: v1
    labels:
      version: v1
