kube/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: stock-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: proxy-virtual
spec:
  hosts:
  - "*"
  gateways:
  - stock-gateway
  http:
  - match:
    - headers:
        api-type:
          exact: yahoo
    # - uri:
    #     prefix: /getAllStocks
    route:
    - destination:
        host: yahoo
        subset: v1
        port:
          number: 8080
      weight: 50
    - destination:
        host: yahoo
        subset: v2
        port:
          number: 8080
      weight: 50
  - match:
    - headers:
        api-type:
          exact: google
    # - uri:
    #     prefix: /getAllStocks
    route:
    - destination:
        host: google
        port:
          number: 8081
---
# apiVersion: networking.istio.io/v1alpha3
# kind: VirtualService
# metadata:
#   name: google-service
# spec:
#   hosts:
#   - "*"
#   gateways:
#   - stock-gateway
#   http:
#   - match:
#     - headers:
#         api-type:
#           exact: yahoo
#     route:
#     - destination:
#         host: google
#         subset: v1
#         port:
#           number: 8081
# ---
