kube/routeservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: proxy-virtual
spec:
  hosts:
    - 
  http:
  - match:
    - headers:
        end-user:
          exact: jason
    route:
    - destination:
        host: yahoo
        subset: v1
  - route:
    - destination:
        host: google
        subset: v1
