kube/traffic-hundred-percent.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: yahoo-traffic
spec:
  hosts:
    - yahoo
  http:
    - route:
        - destination:
            host: yahoo
            subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: google-traffic
spec:
  hosts:
    - google
  http:
    - route:
        - destination:
            host: google
            subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: proxy-traffic
spec:
  hosts:
    - proxy
  http:
    - route:
        - destination:
            host: proxy
            subset: v1
---
