kube/traffic-proprtion.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: stock-traffic-service
  ...
spec:
  hosts:
    - yahoo
  http:
    - route:
        - destination:
            host: yahoo
            subset: v1
          weight: 50
        - destination:
            host: yahoo
            subset: v2
          weight: 50
