kube/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: stock-vservice
spec:
  hosts:
    - yahoo
  gateways:
    - stock-gateway
  http:
    - match:
        - uri:
            prefix: /yahooapi
      route:
        - destination:
            host: yahoo
            subset: v1
